Fix some page overlap on mobile devices, add basic 404

--- a/themes/gibbonedu/static/css/tailwind.css
+++ b/themes/gibbonedu/static/css/tailwind.css
@@ -60,6 +60,7 @@ p:not(:last-child) {
 a {
   color: inherit;
   text-decoration: none;
+  word-break: break-all;
 }
 
 .content a:not([class]) {
