--- a/themes/gibbonedu/static/css/theme.css
+++ b/themes/gibbonedu/static/css/theme.css
@@ -597,6 +597,7 @@ p:not(:last-child) {
 a {
   color: inherit;
   text-decoration: none;
+  word-break: break-all;
 }
 
 .content a:not([class]) {
